<?xml version="1.0"?>
<package format="2">
  <name>hebi-ros-daisy</name>
  <version>0.0.2</version>
  <description>A package for running the HEBI Hexapod (Daisy) as a ROS node.</description>

  <maintainer email="matt@hebirobotics.com">Matthew Tesch</maintainer>
  <license>MIT</license>
  <url type="website">http://docs.hebi.us</url>
  <url type="repository">https://github.com/HebiRobotics/hebi-ros-daisy</url>
  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>hebi_cpp_api</depend>

  <export />
</package>
